--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" type="text/css" href="css.css">
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>My name is Alex</p>
+    <p>Lorem ipsum dolor sit aem</p>
   </body>
 </head>
